// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    class="Select"
    data-test-id="cf-ui-select"
    id="optionSelect"
    name="optionSelect"
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  class="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    class="Select"
    data-test-id="cf-ui-select"
    id="optionSelect"
    name="optionSelect"
    required=""
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;

exports[`renders the component in disabled state 1`] = `
<div
  class="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    class="Select Select--disabled"
    data-test-id="cf-ui-select"
    disabled=""
    id="optionSelect"
    name="optionSelect"
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  class="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    class="Select"
    data-test-id="cf-ui-select"
    id="optionSelect"
    name="optionSelect"
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;

exports[`renders the component with an extra class name 1`] = `
<div
  class="Select__wrapper Select--full extraClassName"
>
  <select
    aria-label="optionSelect"
    class="Select"
    data-test-id="cf-ui-select"
    id="optionSelect"
    name="optionSelect"
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;

exports[`renders the component with error 1`] = `
<div
  class="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    class="Select Select--negative"
    data-test-id="cf-ui-select"
    id="optionSelect"
    name="optionSelect"
  >
    <option
      data-test-id="cf-ui-select-option"
      value="optionOne"
    >
      Option One
    </option>
  </select>
  <svg
    class="Icon Icon--small Icon--muted Select__icon"
    data-test-id="cf-ui-icon"
    height="1em"
    viewBox="0 0 18 18"
    width="1em"
  >
    <path
      d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
    />
  </svg>
</div>
`;
